--- a/index.html
+++ b/index.html
@@ -1,41 +1,31 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>boredem</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <title> Boredem</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <i class="fa-brands fa-playstation"></i>Boredem
-            <nav>
-                <ul>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">SERVICES</a></li>
-                    <li><a href="">INFORMATION</a></li>
-                    <li><a href="">CONTACT</a></li>
-                </ul>
-            </nav>
-            
-            <a href="regform.html"><button class="btn" id="btn2">SIGN IN</button></a>
+    <header>
+      <div class="head">
+         <div class="logo">
+           <i class="fa-brands fa-playstation"></i> Boredem
         </div>
-        <div class="content">
-            <div class="text">
-            <h1>Helping build your <br> <span> romantic Life</span></h1>
-            <p>Our advisory services will offer you a complete<br>boredome solution and entertain you.
-            </p>
-            <button class="btn3">Build your profile</button>
-           </div>
-        <div class="pepsi">
-       <img src="images/couple-g661d497b8_1280.png">
-        </div>
-       </div>
-       </div>
-   </div>
+        <div class="links"><a href="#">ABOUT</a></div>
+        <div class="links"><a href="#">SERVICES</a></div>
+        <div class="links"><a href="#">INFORMATION</a></div>
+        <div class="link"><a href="#">CONTACT</a></div>
+        <div class="link2"><a href="#">SIGN IN</a></div> 
+       </div> 
+    </header>
+    <div class="body1"> 
+        <div class="text1">Helping build your <br> romantic Life </div>
+        <div class="text2">Our advisory services will offer you a complete <br> boredome solution and entertain you</div>
+        <div class="btn"><input type="button" value="Build your Profile"></div>
+        <div class="img"><img src="img/couple-g477cfe423_1920.png" ></div>
+</div>
+    
 </body>
 </html>
- 
