--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
        </div> 
     </header>
     <div class="body1"> 
-        <div class="text1">Helping build your <br> romantic Life </div>
-        <div class="text2">Our advisory services will offer you a complete <br> boredome solution and entertain you</div>
+        <div class="a">Helping build your <br> romantic Life </div>
+        <div class="b">Our advisory services will offer you a complete <br> boredome solution and entertain you</div>
         <div class="btn"><input type="button" value="Build your Profile"></div>
         <div class="img"><img src="img/couple-g477cfe423_1920.png" ></div>
 </div>
